# mc-talos

./: CMakeLists.txt  README.md  generate_urdf.cmake
convex/: bart-ch.txt  bart_light-ch.txt  dummy_hand-ch.txt  femur-ch.txt  femur_light-ch.txt  foot-ch.txt  hipZ-ch.txt  hipZ_light-ch.txt  marker-ch.txt  marker_head-ch.txt  super-simple-bart-ch.txt  super-simple-femur-ch.txt  super-simple-tibia-ch.txt  talos_dummy-ch.txt  tibia-ch.txt  tibia_light-ch.txt
convex/arm/: arm_1-ch.txt  arm_1_collision-ch.txt  arm_2-ch.txt  arm_2_collision-ch.txt  arm_3-ch.txt  arm_3_collision-ch.txt  arm_4-ch.txt  arm_4_collision-ch.txt  arm_5-ch.txt  arm_5_collision-ch.txt  arm_6-ch.txt  arm_6_collision-ch.txt  arm_7-ch.txt  arm_7_collision-ch.txt
convex/gripper/: base_link-ch.txt  base_link_collision-ch.txt  fingertip-ch.txt  fingertip_collision-ch.txt  gripper_motor_double-ch.txt  gripper_motor_double_collision-ch.txt  gripper_motor_single-ch.txt  gripper_motor_single_collision-ch.txt  gripper_simple-ch.txt  gripper_simple_collision-ch.txt  gripper_tweezers-ch.txt  gripper_tweezers_collision-ch.txt  inner_double-ch.txt  inner_double_collision-ch.txt  inner_single-ch.txt  inner_single_collision-ch.txt
convex/head/: head_1-ch.txt  head_1_collision-ch.txt  head_2_collision-ch.txt  head_2_default-ch.txt  head_2_default_collision-ch.txt  head_2_lidar-ch.txt  head_2_lidar_collision-ch.txt
convex/mirrored/arm/: arm_1_collision-ch.txt  arm_2_collision-ch.txt  arm_3_collision-ch.txt  arm_4_collision-ch.txt  arm_5_collision-ch.txt  arm_6_collision-ch.txt  arm_7_collision-ch.txt
convex/mirrored/v2/: ankle_X_collision-ch.txt  ankle_Y_collision-ch.txt  base_link_collision-ch.txt  hip_x_collision-ch.txt  hip_y_collision-ch.txt  hip_z_collision-ch.txt  knee_collision-ch.txt
convex/sensors/orbbec/: orbbec-ch.txt
convex/to_mirror/arm/: arm_1_collision-ch.txt  arm_2_collision-ch.txt  arm_3_collision-ch.txt  arm_4_collision-ch.txt  arm_5_collision-ch.txt  arm_6_collision-ch.txt  arm_7_collision-ch.txt
convex/to_mirror/v2/: ankle_X_collision-ch.txt  ankle_Y_collision-ch.txt  base_link_collision-ch.txt  hip_x_collision-ch.txt  hip_y_collision-ch.txt  hip_z_collision-ch.txt  knee_collision-ch.txt
convex/torso/: base_link-ch.txt  base_link_collision-ch.txt  torso_1-ch.txt  torso_2-ch.txt  torso_2_collision-ch.txt
convex/v2/: ankle_X_collision-ch.txt  ankle_X_lo_res-ch.txt  ankle_Y_collision-ch.txt  ankle_Y_lo_res-ch.txt  base_link_collision-ch.txt  base_link_lo_res-ch.txt  hip_x_collision-ch.txt  hip_x_lo_res-ch.txt  hip_y_collision-ch.txt  hip_y_lo_res-ch.txt  hip_z_collision-ch.txt  hip_z_lo_res-ch.txt  knee_collision-ch.txt  knee_lo_res-ch.txt
etc/mc_controllers/LIPMWalking/: talos.yaml
meshes/: mirrorNames
meshes/mirrored/arm/: arm_1_collision.STL  arm_2_collision.STL  arm_3_collision.STL  arm_4_collision.STL  arm_5_collision.STL  arm_6_collision.STL  arm_7_collision.STL
meshes/mirrored/v2/: ankle_X_collision.stl  ankle_Y_collision.stl  hip_x_collision.stl  hip_y_collision.stl  hip_z_collision.stl  knee_collision.stl
mujoco/: CMakeLists.txt
mujoco/mc_mujoco/: talos.in.yaml
mujoco/xml/: talos.xml
rsdf/: l_ankle.rsdf  l_wrist.rsdf  r_ankle.rsdf  r_wrist.rsdf
src/: config.h.in  talos.cpp  talos.h
src/convex/: arm_1-ch.txt  arm_1_collision-ch.txt  arm_2-ch.txt  arm_2_collision-ch.txt  arm_3-ch.txt  arm_3_collision-ch.txt  arm_4-ch.txt  arm_4_collision-ch.txt  arm_5-ch.txt  arm_5_collision-ch.txt  arm_6-ch.txt  arm_6_collision-ch.txt  arm_7-ch.txt  arm_7_collision-ch.txt  bart_light-ch.txt  base_link-ch.txt  base_link_collision-ch.txt  dummy_hand-ch.txt  femur-ch.txt  femur_light-ch.txt  fingertip-ch.txt  fingertip_collision-ch.txt  foot-ch.txt  gripper_motor_double-ch.txt  gripper_motor_double_collision-ch.txt  gripper_motor_single-ch.txt  gripper_motor_single_collision-ch.txt  gripper_simple_collision-ch.txt  gripper_tweezers-ch.txt  head_1-ch.txt  head_1_collision-ch.txt  head_2-ch.txt  hipZ-ch.txt  hipZ_light-ch.txt  inner_double-ch.txt  inner_double_collision-ch.txt  inner_single-ch.txt  inner_single_collision-ch.txt  super-simple-bart-ch.txt  super-simple-femur-ch.txt  (+4 more)
tests/: CMakeLists.txt
utils/: generate_convexes.sh
