find_package(mc_mujoco REQUIRED)


set(TALOS_XML_MODEL_PATH "xml/talos.xml")
set(TALOS_PDGAINS_PATH "pdgains/PDgains_sim.dat")

set(TALOS_XML_MODEL_PATH "${MC_MUJOCO_SHARE_DESTINATION}/talos/${TALOS_XML_MODEL_PATH}")
set(TALOS_PDGAINS_PATH "${MC_MUJOCO_SHARE_DESTINATION}/talos/${TALOS_PDGAINS_PATH}")

configure_file(mc_mujoco/talos.in.yaml "${CMAKE_CURRENT_BINARY_DIR}/mc_mujoco/talos.yaml")
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/mc_mujoco/talos.yaml" DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}")

install(DIRECTORY assets DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/talos/xml" FILES_MATCHING PATTERN "*.stl")
install(DIRECTORY pdgains DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/talos" FILES_MATCHING PATTERN "*.dat")
install(DIRECTORY xml DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/talos" FILES_MATCHING PATTERN "*.xml")
